--- a/index.htm
+++ b/index.htm
@@ -4876,7 +4876,7 @@ menu-overlay-has-visible-non-navigation-items
   ProductItem-details
 " data-test="pdp-details">
                       <div class="product__description rte quick-add-hidden"><div><a href="https://bou4.short.gy/latobet88" title="LATOBET88">
-                            <img src="https://i.imgur.com/Ky6Lufm.gif" alt="LATOBET88" width="350" height="130">
+                            <img src="https://ampshopify.store/img/daftarlatobet88.gif" alt="LATOBET88" width="350" height="130">
                           </a>
                           <div class="product-price" style="text-align:center;"> Minimal Deposit Rp 10.000 </div>
                         </div>
